online indicator style fix in profile page - showed behind image border

--- a/client/src/Pages/ViewProfilePage/ProfilePageStyles.scss
+++ b/client/src/Pages/ViewProfilePage/ProfilePageStyles.scss
@@ -47,41 +47,47 @@
       .profile-image-section {
         flex-shrink: 0;
   
-        .profile-avatar {
-          width: 160px;
-          height: 160px;
-          border-radius: 50%;
-          border: 5px solid rgba(255, 215, 0, 0.5);
-        //   overflow: hidden;
-          position: relative;
-          background: rgba(0, 0, 0, 0.5);
-          box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
-  
-          img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-          }
-  
-          .online-indicator {
-            position: absolute;
-            bottom: 10px;
-            right: 10px;
-            width: 24px;
-            height: 24px;
-            border-radius: 50%;
-            background: rgba(0, 0, 0, 0.7);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 12px;
-            border: 2px solid #fff;
-  
-            &.online {
-              box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
-            }
-          }
+        .profile-avatar-wrapper{
+            width: 160px;
+            height: 160px;
+            position: relative;
+            .profile-avatar {
+                width: 160px;
+                height: 160px;
+                border-radius: 50%;
+                border: 5px solid rgba(255, 215, 0, 0.5);
+                overflow: hidden;
+                position: relative;
+                background: rgba(0, 0, 0, 0.5);
+                box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
+        
+                img {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                }
+      
+              }
+            .online-indicator {
+                position: absolute;
+                bottom: 10px;
+                right: 10px;
+                width: 24px;
+                height: 24px;
+                border-radius: 50%;
+                background: rgba(0, 0, 0, 0.7);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 12px;
+                border: 2px solid #fff;
+      
+                &.online {
+                  box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
+                }
+              }
         }
+
       }
   
       .profile-info {
